# raz-lang

./: .gitignore  Cargo.toml  readme.md  readme.org
example/: 1._Number-String_Concat.raz  2._String_Subtraction.raz  4._Logical_Operators.raz  5._Conditional_Allocation.raz  6._Fibonnaci_Sequence.raz  7._Native_Clock.raz  8._Function_Declaration.raz  9._RPN.raz  benchmark.py  benchmark.rz  comments.raz  empty.raz  fail.txt  nicer_debug.raz  print.raz  test.raz  test1.raz  test2.raz  test3.raz  test4.raz  test5.raz  test6.raz  test7.raz  test8.raz  test9.raz  test9.raz~  西里西亞
src/: compiler.rs  digit.rs  environment.rs  expr.rs  interpreter.rs  lib.rs  literals.rs  main.rs  native.rs  parser.rs  runner.rs  scanner.rs  stmt.rs
src/functions/: clock.rs  func.rs  mod.rs
